[tool.poetry]
name = "unit-testing-python"
version = "0.1.0"
description = ""
authors = ["Mariano Daniel Gobea Alcoba <mariano.gobea@mercadolibre.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
